# Serial-Notebook-Executor

./: .gitignore  PUBLISHING.md  README.md  pyproject.toml  scheduler.py
notebooks/: fail_nb.ipynb  test_nb_1.ipynb  test_nb_2.ipynb
src/nb_scheduler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
